--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">StenoAdmin</string>
+    <string name="fill_all_details">Fill All Details</string>
+    <string name="course_id">Course Id</string>
+    <string name="course_name">course Name</string>
+    <string name="course_time_in_hours">Course Time in Hours</string>
+    <string name="numer_of_tests">Numer of Tests</string>
+    <string name="number_of_question">Number of Question</string>
+    <string name="price">price</string>
+    <string name="author">Author</string>
+    <string name="description">Description</string>
+    <string name="what_is_user_learn_from_this_course">what is user learn from this course</string>
+    <string name="summary_or_context_of_course">Summary or Context of Course</string>
 </resources>
